ecmascript/parser/tests/test262-error-references/fail/379c49fbf3259511.js.stderr
error: LineBreak cannot follow 'throw'
 --> $DIR/tests/test262-parser/fail/379c49fbf3259511.js:2:5
  |
2 |  */ e
  |     ^

